--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -6,11 +6,11 @@
 }
 
 :root {
-    --primary-color: #4CAF50;
+    --primary-color: #4ca3af;
     --secondary-color: #2196F3;
-    --danger-color: #f44336;
+    --danger-color: #f46236;
     --warning-color: #ff9800;
-    --success-color: #4CAF50;
+    --success-color: #34a881;
     --dark-color: #333;
     --light-color: #f5f5f5;
     --border-color: #ddd;
